# clloop

./: CMakeLists.txt  README.org  clloop.h
tests/: CMakeLists.txt  test_copy.cl  test_pointer.cl  test_struct_copy.cl  testwrapper.cc
